Kleine aanpassing in Readme.html

--- a/README.html
+++ b/README.html
@@ -13,7 +13,7 @@
 	  TOP10NL versie 1.1.1 heeft een eigen informatiemodel (top10nl). <br>
 	  TOP10NL versie 1.2.0 is een onderdeel (applicationSchema) van
       het Informatiemodel Basisregistratie Topografie (IMBRT).<br>
-	  De objecthistorie van TOP10NL 1.2.0 is ook oeen nderdeel van IMBRT.</font>
+	  De objecthistorie van TOP10NL 1.2.0 is ook een onderdeel van IMBRT.</font>
 	</p>
 	<p><font face="sans-serif">
  	  De UML van IMBRT staat op 
