--- a/README.html
+++ b/README.html
@@ -20,8 +20,11 @@
 	  <a href="http://register.geostandaarden.nl/informatiemodel/imbrt/1.2.1">http://register.geostandaarden.nl/informatiemodel/imbrt/1.2.1</a>
 	  <br>
 	  De XSD's van TOP10NL en TOP10NL_Objecthistorie staan op <a href="http://register.geostandaarden.nl/gmlapplicatieschema/top10nl/1.2.0">
-	  http://register.geostandaarden.nl/gmlapplicatieschema/top10nl/1.2.0
-	  </a></font>
+	  http://register.geostandaarden.nl/gmlapplicatieschema/top10nl/1.2.0</a>
+	  <br>
+	  De waardelijsten van TOP10NL 1.2.0 staan op 
+	  <a href="http://register.geostandaarden.nl/waardelijst/top10nl/20140901">http://register.geostandaarden.nl/waardelijst/top10nl/20140901</a>
+      </font>
 	</p>
   </body>
 </html>
