Nieuwe README files en visualisatie Excel
Nieuwe README files met informatie over symbolen en visuatisaties. Ook
een Excel document met beschrijving van de visualisaties incl. plaatjes
toegevoegd.

--- a/README.html
+++ b/README.html
@@ -17,13 +17,21 @@
 	</p>
 	<p><font face="sans-serif">
  	  De UML van IMBRT staat op 
-	  <a href="http://register.geostandaarden.nl/informatiemodel/imbrt/1.2.1">http://register.geostandaarden.nl/informatiemodel/imbrt/1.2.1</a>
+	  <a href="http://register.geostandaarden.nl/informatiemodel/imbrt/1.2.1">http://register.geostandaarden.nl/informatiemodel/imbrt/1.2.1</a>.
 	  <br>
 	  De XSD's van TOP10NL en TOP10NL_Objecthistorie staan op <a href="http://register.geostandaarden.nl/gmlapplicatieschema/top10nl/1.2.0">
-	  http://register.geostandaarden.nl/gmlapplicatieschema/top10nl/1.2.0</a>
+	  http://register.geostandaarden.nl/gmlapplicatieschema/top10nl/1.2.0</a>.
 	  <br>
 	  De waardelijsten van TOP10NL 1.2.0 staan op 
-	  <a href="http://register.geostandaarden.nl/waardelijst/top10nl/20140901">http://register.geostandaarden.nl/waardelijst/top10nl/20140901</a>
+	  <a href="http://register.geostandaarden.nl/waardelijst/top10nl/20140901">http://register.geostandaarden.nl/waardelijst/top10nl/20140901</a>.
+	  <br>
+	  De visualisaties van TOP10NL 1.2.0 zijn als SLD's opgenomen in 
+	  <a href="http://register.geostandaarden.nl/visualisatie/top10nl/1.2.0">
+	  http://register.geostandaarden.nl/visualisatie/top10nl/1.2.0</a> incl. een Excel document met voorbeeld plaatjes.
+	  <br>
+	  De symbolen van TOP10NL 1.2.0 zijn als font files opgenomen in 
+	  <a href="http://register.geostandaarden.nl/symool/top10nl/1.2.0"> 
+	  http://register.geostandaarden.nl/symool/top10nl/1.2.0</a>.
       </font>
 	</p>
   </body>
