--- a/informatiemodel/1.2.0/README.html
+++ b/informatiemodel/1.2.0/README.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Informatiemodel TOP250NL</title>
+    <title>Informatiemodel TOP10NL</title>
   </head>
   <body text="#000000" bgcolor="#FFFFFF">
     <h1><font face="sans-serif" color="#3399ee">UML van TOP10NL</font></h1>
@@ -9,11 +9,11 @@
       Topografie (BRT). <br></font>
     </p>
     <p><font face="sans-serif">
-	  Deze versie (1.2.0) van TOP10NL is opgenomen in IMBRT versie 1.2.1. Dit informatiemodel is gepubliceerd op <a
-         href="http://register.geostandaarden.nl/informatiemodel/imbrt/1.2.1">http://register.geostandaarden.nl/informatiemodel/imbrt/1.2.1</a>
+	  Deze versie (1.2.0) van TOP10NL is opgenomen in IMBRT versie 1.2.3. Dit informatiemodel is gepubliceerd op <a
+         href="http://register.geostandaarden.nl/informatiemodel/imbrt/1.2.3">http://register.geostandaarden.nl/informatiemodel/imbrt/1.2.3</a>
 	</font></p>
 	<p><font face="sans-serif">	
-	   In de UML van IMBRT (imbrt.eap) zijn 2 applicationSchema's voor TOP10NL opgenomen, namelijk TOP10NL en TOP10NL_objecthistorie. TOP10NL was al aanwezig in IMBRT 1.2.0. In versie 1.2.1 is daar TOP10NL_objecthistorie aan toegevoegd.
-	</font></p>	 
+	   In de UML van IMBRT (imbrt.eap) zijn 2 applicationSchema's voor TOP10NL opgenomen, namelijk TOP10NL en TOP10NL_objecthistorie.</font>
+	</p>	 
   </body>
 </html>
