--- a/README.html
+++ b/README.html
@@ -30,8 +30,8 @@
 	  http://register.geostandaarden.nl/visualisatie/top10nl/1.2.0</a> incl. een Excel document met voorbeeld plaatjes.
 	  <br>
 	  De symbolen van TOP10NL 1.2.0 zijn als font files opgenomen in 
-	  <a href="http://register.geostandaarden.nl/symool/top10nl/1.2.0"> 
-	  http://register.geostandaarden.nl/symool/top10nl/1.2.0</a>.
+	  <a href="http://register.geostandaarden.nl/symbool/top10nl/1.2.0"> 
+	  http://register.geostandaarden.nl/symbool/top10nl/1.2.0</a>.
       </font>
 	</p>
   </body>
